2006-01-24  Adele Peterson <adele@apple.com>

        Test for focus and blur for new text fields.

        * fast/forms/input-appearance-focus.html: Added.
        * fast/forms/input-appearance-focus-expected.txt: Added.
        * fast/forms/input-appearance-focus-expected.png: Added.
        * fast/forms/input-appearance-focus-expected.checksum: Added.

2006-01-24  Darin Adler  <darin@apple.com>

       Reviewed by Eric.

       - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6782
         REGRESSION: replaceChild broken when node to replace is first (TinyMCE test app broken)

       * fast/dom/replace-first-child.html: Added.
       * fast/dom/replace-first-child-expected.txt: Added

2006-01-24  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Dave Hyatt.

        - test case for http://bugzilla.opendarwin.org/show_bug.cgi?id=6778
        (Crash if a node is removed from the DOM before being reparented due to residual style)
        
        * fast/parser/remove-block-in-residual-style-expected.checksum: Added.
        * fast/parser/remove-block-in-residual-style-expected.png: Added.
        * fast/parser/remove-block-in-residual-style-expected.txt: Added.

2006-01-23  Darin Adler  <darin@apple.com>

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6385
          REGRESSION: Unnamed frames return a generated name as window.frameElement.name

        * fast/frames/frame-element-name.html: Added.
        * fast/frames/frame-element-name-expected.txt: Added.
        * fast/frames/frame-element-name-expected.png: Added.
        * fast/frames/frame-element-name-expected.checksum: Added.

2006-01-23  Darin Adler  <darin@apple.com>

        Suggested by Anders.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6617
          REGRESSION: Crash in cloneChildNodes when clicking element

        * fast/dom/clone-node-form-elements-with-attr.html: Added.