@@ -1,0 +1,20 @@
+<html>
+<head>
+<script>
+if (window.layoutTestController) layoutTestController.dumpAsText();
+function oops() {
+    document.getElementById("2").innerText = "If you see this, the test has FAILED.";
+}
+function load() {
+    document.getElementById("1").innerText = "If you see this paragraph and the one below and both agree, the test has succeeded.";
+}
+</script>
+</head>
+<body onload="load()">
+<p>A test to make sure we don't fire an extra onchange event for checked radio buttons.
+<a href="http://bugzilla.opendarwin.org/show_bug.cgi?id=6731">Bug 6731</a> has the details.</p>
+<p id="1"></p>
+<p id="2">If you see this paragraph and the one above and both agree, the test has succeeded.</p>
+<input type="radio" name="test" onchange="oops()" checked="checked">
+</body>
+</html>
