@@ -1,3 +1,11 @@
+2006-01-24  Darin Adler  <darin@apple.com>
+
+       - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6731
+         REGRESSION: change event fires at load time for checked items
+
+        * fast/forms/radio-button-no-change-event.html: Added.
+        * fast/forms/radio-button-no-change-event-expected.txt: Added.
+
 2006-01-24  Adele Peterson <adele@apple.com>
 
         Test for focus and blur for new text fields.
